--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_welcom">WelcomActivity</string>
+    <string name="txt_welcome">欢迎使用农发货手机APP</string>
+    <string name="net_failure">网络请求失败</string>
+    <string name="net_failure_refresh">请检查您的网络并点击屏幕刷新</string>
 </resources>
